web2w/pascal.output
Terminals unused in grammar

   "end of web"
   HEAD
   BAR
   PLEFT
   MLEFT
   RIGHT
   OPEN
   CLOSE
   TEXT
   NL
   HASH
   OMACRO
   PMACRO
   PARAM
   EQ
   EQEQ
   ATSTAR
   ATSPACE
   ATD
   ATF
   ATLESS
   ATGREATER
   ELIPSIS
   ATP
   OCTAL
   HEX
   ATAT
   ATDOLLAR
   ATLEFT
   ATRIGHT
   ATINDEX
   ATINDEXTT
   ATINDEX9
   ATT
   ATEQ
   ATAND
   ATBACKSLASH
   ATEX
   ATQM
   ATCOMMA
   ATSLASH
   ATBAR
   ATHASH
   ATPLUS
   ATSEMICOLON
   INDENT
   METACOMMENT
   CSEMICOLON
   ID
   WDEBUG
   WSTAT
   WINIT
   WTINI
   WTATS
   WGUBED
   FIRST_PASCAL_TOKEN
   "nil"
   "index type"
   "variable definition"
   "parameter definition"
   "reference parameter definition"
   "constant definition"
   "typename definition"
   "subrange typename definition"
   "array of file type"
   "functionname definition"
   "return value"
   "function begin"
   "function end"
   "in"
   "with"
   "set"
   CLABELN
   CINTDEF
   CSTRDEF
   CMAIN
   CMAINEND
   CUNION
   CTSUBRANGE
   CINT
   "empty statement"


State 189 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: programheading globals "begin" statements "end" "."

    2 programheading: "program" "identifier" ";"

    3 globals: labels constants types variables procedures

    4 labels: %empty
    5       | "label" labellist ";"

    6 labellist: labeldecl
    7          | labellist "," labeldecl

    8 labeldecl: NMACRO
    9          | "0-9"
   10          | "final_end"
   11          | labeldecl "+" "0-9"

   12 constants: %empty
   13          | "const" constdefinitions
   14          | "const" constdefinitions conststringdefinition

   15 constdefinitions: constdefinition
   16                 | constdefinitions constdefinition

   17 constdefinition: "identifier" "=" "0-9" ";"

   18 conststringdefinition: "identifier" "=" "'...'" ";"

   19 types: %empty
   20      | "type" typedefinitions

   21 typedefinitions: typedefinition
   22                | typedefinitions typedefinition

   23 typedefinition: "identifier" "=" subrange ";"
   24               | "identifier" "=" type ";"

   25 subrange: iconst ".." iconst
   26         | "char type"

   27 iconst: signed_iconst
   28       | iconst "+" simple_iconst
   29       | iconst "-" simple_iconst

   30 signed_iconst: simple_iconst
   31              | "+" simple_iconst
   32              | "-" simple_iconst

   33 simple_iconst: "0-9"
   34              | NMACRO
   35              | "constant"

   36 file_type: packed "file" "of" typename
   37          | packed "file" "of" subrange

   38 packed: "packed"
   39       | %empty

   40 typename: "integer type"
   41         | "real type"
   42         | "bool type"
   43         | "identifier"

   44 record_type: packed "record" fields "end"
   45            | packed "record" variant_part "end"
   46            | packed "record" fields ";" variant_part "end"

   47 fields: recordsection
   48       | fields ";" recordsection

   49 recordsection: %empty
   50              | recids ":" type
   51              | recids ":" subrange

   52 recids: "identifier"
   53       | recids "," "identifier"

   54 variant_part: "case" "identifier" "of" variants

   55 variants: variant
   56         | variants variant

   57 variant: "0-9" ":" "(" recordsection ")" ";"
   58        | "0-9" ":" "(" recordsection ";" recordsection ")" ";"

   59 type: typename
   60     | file_type
   61     | record_type

   62 array_type: packed "array" "[" iconst ".." iconst "]" "of" type
   63           | packed "array" "[" iconst ".." iconst "]" "of" subrange
   64           | packed "array" "[" "identifier" "]" "of" type
   65           | packed "array" "[" "identifier" "]" "of" subrange
   66           | packed "array" "[" "char type" "]" "of" type

   67 variables: %empty
   68          | "var" vardeclarations

   69 vardeclarations: vardeclaration
   70                | vardeclarations vardeclaration

   71 vardeclaration: varids ":" type ";"
   72               | varids ":" array_type ";"
   73               | varids ":" subrange ";"

   74 varids: entire_var
   75       | varids "," entire_var

   76 procedures: %empty
   77           | procedures procedure
   78           | procedures function

   79 locals: "var" localvardeclarations
   80       | "label" locallabellist ";" localvariables

   81 locallabellist: locallabeldecl
   82               | locallabellist "," locallabeldecl

   83 locallabeldecl: NMACRO
   84               | "0-9"
   85               | labeldecl "+" "0-9"

   86 localvariables: %empty
   87               | "var" localvardeclarations

   88 localvardeclarations: localvardeclaration
   89                     | localvardeclarations localvardeclaration

   90 localvardeclaration: localvarids ":" type ";"
   91                    | localvarids ":" array_type ";"
   92                    | localvarids ":" subrange ";"

   93 localvarids: localentire_var
   94            | localvarids "," localentire_var

   95 localentire_var: "identifier"
   96                | "reference variable"

   97 procedure: pheading locals "begin" statements "end" ";"
   98          | pheading "begin" statements "end" ";"
   99          | pheading "forward" ";"

  100 $@1: %empty

  101 function: fheading "begin" $@1 statements "end" ";"

  102 $@2: %empty

  103 function: fheading locals "begin" $@2 statements "end" ";"

  104 pid: "identifier"
  105    | "procedurename"
  106    | "functionname"

  107 pheading: "procedure" pid ";"
  108         | "procedure" pid "(" formals ")" ";"

  109 fheading: "function" pid ":" typename ";"
  110         | "function" pid "(" formals ")" ":" typename ";"

  111 formals: formalparameters
  112        | formals ";" formalparameters

  113 formalparameters: params ":" typename

  114 params: param
  115       | params "," param

  116 param: entire_var
  117      | "var" entire_var

  118 proc_stmt: "procedurename" "(" args ")"
  119          | "call" "(" args ")"
  120          | "procedurename"
  121          | "call"

  122 function_call: "functionname" "(" args ")"
  123              | "call" "(" args ")"
  124              | "functionname"
  125              | "call"

  126 args: arg
  127     | args "," arg

  128 arg: expression
  129    | write_arg
  130    | STRING
  131    | CHAR

  132 write_arg: expression ":" expression

  133 statements: statement
  134           | statements ";" statement

  135 statement: stmt
  136          | label ":" stmt
  137          | "final_end" ":" stmt

  138 goto_stmt: "goto" label
  139          | "goto" "final_end"
  140          | CIGNORE "final_end"
  141          | "return"

  142 label: "0-9"
  143      | NMACRO
  144      | CLABEL
  145      | NMACRO "+" "0-9"

  146 stmt: simple_stmt
  147     | structured_stmt

  148 simple_stmt: empty_stmt
  149            | assign_stmt
  150            | return_stmt
  151            | goto_stmt
  152            | proc_stmt

  153 empty_stmt: %empty

  154 assign_stmt: variable ":=" expression
  155            | variable ":=" STRING
  156            | variable ":=" "(" STRING ")"

  157 return_stmt: "functionname" ":=" expression
  158            | "C function return" CIGNORE expression
  159            | "C function return" CIGNORE expression CIGNORE CIGNORE
  160            | "C function return"
  161            | "C procedure return"

  162 structured_stmt: compound_stmt
  163                | conditional_stmt
  164                | repetitive_stmt

  165 compound_stmt: "begin" statements "end"

  166 conditional_stmt: if_stmt
  167                 | case_stmt

  168 if_stmt: "if" expression "then" statement
  169        | "if" expression "then" statement "else" statement

  170 case_stmt: "case" expression "of" case_list "end"
  171          | "case" expression "of" case_list ";" "end"

  172 case_list: case_element
  173          | case_list ";" case_element
  174          | case_list "break" case_element

  175 case_element: case_labels ":" statement
  176             | "others" statement

  177 case_labels: case_label
  178            | case_labels "," case_label
  179            | case_labels "C :" case_label

  180 case_label: "0-9"
  181           | NMACRO
  182           | "0-9" "+" NMACRO
  183           | NMACRO "+" NMACRO
  184           | NMACRO "+" "0-9"
  185           | "C case" NMACRO
  186           | "C case" "0-9"
  187           | "C case" NMACRO "+" NMACRO
  188           | NMACRO "-" NMACRO "+" NMACRO

  189 repetitive_stmt: while_stmt
  190                | repeat_stmt
  191                | for_stmt

  192 while_stmt: "while" expression "do" statement

  193 repeat_stmt: "repeat" statements "until" expression

  194 for_stmt: "for" "identifier" ":=" expression "to" varlimit "do" statement
  195         | "for" "identifier" ":=" expression "to" iconst "do" statement
  196         | "for" "identifier" ":=" expression "downto" iconst "do" statement

  197 varlimit: variable
  198         | variable "-" expression
  199         | variable "+" expression
  200         | iconst "*" expression

  201 variable: "identifier"
  202         | "reference variable"
  203         | indexed_var
  204         | field_var
  205         | file_var

  206 entire_var: "identifier"
  207           | "reference variable"

  208 indexed_var: variable "[" expression "]"
  209            | variable "[" STRING "]"
  210            | "array of file name" "[" expression "]"

  211 field_var: variable "." "identifier"

  212 file_var: variable "^"

  213 expression: simple_expr
  214           | simple_expr relop simple_expr
  215           | simple_expr "=" STRING

  216 relop: "="
  217      | "<>"
  218      | "<"
  219      | "<="
  220      | ">"
  221      | ">="

  222 simple_expr: term
  223            | sign term
  224            | simple_expr addop term
  225            | simple_expr addop sign term

  226 sign: "+"
  227     | "-"

  228 addop: "+"
  229      | "-"
  230      | "or"

  231 term: factor
  232     | term mulop factor

  233 mulop: "*"
  234      | "/"
  235      | "div"
  236      | "mod"
  237      | "and"

  238 factor: variable
  239       | unsigned_const
  240       | "(" expression ")"
  241       | function_call
  242       | "not" factor

  243 unsigned_const: real
  244               | "0-9"
  245               | NMACRO
  246               | "'...'"
  247               | "'.'"
  248               | "constant"

  249 real: "real"
  250     | "0-9" "." "0-9"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"end of web" (258)
HEAD (259)
BAR (260)
PLEFT (261)
MLEFT (262)
RIGHT (263)
OPEN (264)
CLOSE (265)
TEXT (266)
NL (267)
HASH (268)
NMACRO (269) 8 34 83 143 145 181 182 183 184 185 187 188 245
OMACRO (270)
PMACRO (271)
PARAM (272)
EQ (273)
EQEQ (274)
ATSTAR (275)
ATSPACE (276)
ATD (277)
ATF (278)
ATLESS (279)
ATGREATER (280)
ELIPSIS (281)
ATP (282)
OCTAL (283)
HEX (284)
ATAT (285)
ATDOLLAR (286)
ATLEFT (287)
ATRIGHT (288)
ATINDEX (289)
ATINDEXTT (290)
ATINDEX9 (291)
ATT (292)
ATEQ (293)
ATAND (294)
ATBACKSLASH (295)
ATEX (296)
ATQM (297)
ATCOMMA (298)
ATSLASH (299)
ATBAR (300)
ATHASH (301)
ATPLUS (302)
ATSEMICOLON (303)
STRING (304) 130 155 156 209 215
CHAR (305) 131
INDENT (306)
METACOMMENT (307)
CSEMICOLON (308)
ID (309)
WDEBUG (310)
WSTAT (311)
WINIT (312)
WTINI (313)
WTATS (314)
WGUBED (315)
"return" (316) 141
FIRST_PASCAL_TOKEN (317)
"+" (318) 11 28 31 85 145 182 183 184 187 188 199 226 228
"-" (319) 29 32 188 198 227 229
"*" (320) 200 233
"/" (321) 234
"=" (322) 17 18 23 24 215 216
"<>" (323) 217
"<" (324) 218
">" (325) 220
"<=" (326) 219
">=" (327) 221
"(" (328) 57 58 108 110 118 119 122 123 156 240
")" (329) 57 58 108 110 118 119 122 123 156 240
"[" (330) 62 63 64 65 66 208 209 210
"]" (331) 62 63 64 65 66 208 209 210
":=" (332) 154 155 156 157 194 195 196
"." (333) 1 211 250
"," (334) 7 53 75 82 94 115 127 178
";" (335) 2 5 17 18 23 24 46 48 57 58 71 72 73 80 90 91 92 97 98 99
    101 103 107 108 109 110 112 134 171 173
"mod" (336) 236
"div" (337) 235
"nil" (338)
"or" (339) 230
"and" (340) 237
"not" (341) 242
"if" (342) 168 169
"then" (343) 168 169
"else" (344) 169
"repeat" (345) 193
"until" (346) 193
"while" (347) 192
"do" (348) 192 194 195 196
"for" (349) 194 195 196
"to" (350) 194 195
"downto" (351) 196
"begin" (352) 1 97 98 101 103 165
"end" (353) 1 44 45 46 97 98 101 103 165 170 171
"goto" (354) 138 139
"0-9" (355) 9 11 17 33 57 58 84 85 142 145 180 182 184 186 244 250
"real" (356) 249
"others" (357) 176
"'...'" (358) 18 246
"'.'" (359) 247
"char type" (360) 26 66
"bool type" (361) 42
"integer type" (362) 40
"real type" (363) 41
"index type" (364)
"identifier" (365) 2 17 18 23 24 43 52 53 54 64 65 95 104 194 195 196
    201 206 211
"variable definition" (366)
"parameter definition" (367)
"reference parameter definition" (368)
"constant" (369) 35 248
"constant definition" (370)
"typename definition" (371)
"subrange typename definition" (372)
"array of file type" (373)
"array of file name" (374) 210
"functionname" (375) 106 122 124 157
"functionname definition" (376)
"procedurename" (377) 105 118 120
"call" (378) 119 121 123 125
"return value" (379)
"final_end" (380) 10 137 139 140
"function begin" (381)
"function end" (382)
".." (383) 25 62 63
":" (384) 50 51 57 58 71 72 73 90 91 92 109 110 113 132 136 137 175
"^" (385) 212
"in" (386)
"case" (387) 54 170 171
"of" (388) 36 37 54 62 63 64 65 66 170 171
"with" (389)
"const" (390) 13 14
"var" (391) 68 79 87 117
"type" (392) 20
"array" (393) 62 63 64 65 66
"record" (394) 44 45 46
"set" (395)
"file" (396) 36 37
"function" (397) 109 110
"procedure" (398) 107 108
"label" (399) 5 80
"packed" (400) 38
"program" (401) 2
"forward" (402) 99
CIGNORE (403) 140 158 159
CLABEL (404) 144
CLABELN (405)
CINTDEF (406)
CSTRDEF (407)
CMAIN (408)
CMAINEND (409)
CUNION (410)
CTSUBRANGE (411)
CINT (412)
"reference variable" (413) 96 202 207
"C function return" (414) 158 159 160
"C procedure return" (415) 161
"C case" (416) 185 186 187
"C :" (417) 179
"break" (418) 174
"empty statement" (419)


Nonterminals, with rules where they appear

$accept (165)
    on left: 0
program (166)
    on left: 1, on right: 0
programheading (167)
    on left: 2, on right: 1
globals (168)
    on left: 3, on right: 1
labels (169)
    on left: 4 5, on right: 3
labellist (170)
    on left: 6 7, on right: 5 7
labeldecl (171)
    on left: 8 9 10 11, on right: 6 7 11 85
constants (172)
    on left: 12 13 14, on right: 3
constdefinitions (173)
    on left: 15 16, on right: 13 14 16
constdefinition (174)
    on left: 17, on right: 15 16
conststringdefinition (175)
    on left: 18, on right: 14
types (176)
    on left: 19 20, on right: 3
typedefinitions (177)
    on left: 21 22, on right: 20 22
typedefinition (178)
    on left: 23 24, on right: 21 22
subrange (179)
    on left: 25 26, on right: 23 37 51 63 65 73 92
iconst (180)
    on left: 27 28 29, on right: 25 28 29 62 63 195 196 200
signed_iconst (181)
    on left: 30 31 32, on right: 27
simple_iconst (182)
    on left: 33 34 35, on right: 28 29 30 31 32
file_type (183)
    on left: 36 37, on right: 60
packed (184)
    on left: 38 39, on right: 36 37 44 45 46 62 63 64 65 66
typename (185)
    on left: 40 41 42 43, on right: 36 59 109 110 113
record_type (186)
    on left: 44 45 46, on right: 61
fields (187)
    on left: 47 48, on right: 44 46 48
recordsection (188)
    on left: 49 50 51, on right: 47 48 57 58
recids (189)
    on left: 52 53, on right: 50 51 53
variant_part (190)
    on left: 54, on right: 45 46
variants (191)
    on left: 55 56, on right: 54 56
variant (192)
    on left: 57 58, on right: 55 56
type (193)
    on left: 59 60 61, on right: 24 50 62 64 66 71 90
array_type (194)
    on left: 62 63 64 65 66, on right: 72 91
variables (195)
    on left: 67 68, on right: 3
vardeclarations (196)
    on left: 69 70, on right: 68 70
vardeclaration (197)
    on left: 71 72 73, on right: 69 70
varids (198)
    on left: 74 75, on right: 71 72 73 75
procedures (199)
    on left: 76 77 78, on right: 3 77 78
locals (200)
    on left: 79 80, on right: 97 103
locallabellist (201)
    on left: 81 82, on right: 80 82
locallabeldecl (202)
    on left: 83 84 85, on right: 81 82
localvariables (203)
    on left: 86 87, on right: 80
localvardeclarations (204)
    on left: 88 89, on right: 79 87 89
localvardeclaration (205)
    on left: 90 91 92, on right: 88 89
localvarids (206)
    on left: 93 94, on right: 90 91 92 94
localentire_var (207)
    on left: 95 96, on right: 93 94
procedure (208)
    on left: 97 98 99, on right: 77
function (209)
    on left: 101 103, on right: 78
$@1 (210)
    on left: 100, on right: 101
$@2 (211)
    on left: 102, on right: 103
pid (212)
    on left: 104 105 106, on right: 107 108 109 110
pheading (213)
    on left: 107 108, on right: 97 98 99
fheading (214)
    on left: 109 110, on right: 101 103
formals (215)
    on left: 111 112, on right: 108 110 112
formalparameters (216)
    on left: 113, on right: 111 112
params (217)
    on left: 114 115, on right: 113 115
param (218)
    on left: 116 117, on right: 114 115
proc_stmt (219)
    on left: 118 119 120 121, on right: 152
function_call (220)
    on left: 122 123 124 125, on right: 241
args (221)
    on left: 126 127, on right: 118 119 122 123 127
arg (222)
    on left: 128 129 130 131, on right: 126 127
write_arg (223)
    on left: 132, on right: 129
statements (224)
    on left: 133 134, on right: 1 97 98 101 103 134 165 193
statement (225)
    on left: 135 136 137, on right: 133 134 168 169 175 176 192 194
    195 196
goto_stmt (226)
    on left: 138 139 140 141, on right: 151
label (227)
    on left: 142 143 144 145, on right: 136 138
stmt (228)
    on left: 146 147, on right: 135 136 137
simple_stmt (229)
    on left: 148 149 150 151 152, on right: 146
empty_stmt (230)
    on left: 153, on right: 148
assign_stmt (231)
    on left: 154 155 156, on right: 149
return_stmt (232)
    on left: 157 158 159 160 161, on right: 150
structured_stmt (233)
    on left: 162 163 164, on right: 147
compound_stmt (234)
    on left: 165, on right: 162
conditional_stmt (235)
    on left: 166 167, on right: 163
if_stmt (236)
    on left: 168 169, on right: 166
case_stmt (237)
    on left: 170 171, on right: 167
case_list (238)
    on left: 172 173 174, on right: 170 171 173 174
case_element (239)
    on left: 175 176, on right: 172 173 174
case_labels (240)
    on left: 177 178 179, on right: 175 178 179
case_label (241)
    on left: 180 181 182 183 184 185 186 187 188, on right: 177 178
    179
repetitive_stmt (242)
    on left: 189 190 191, on right: 164
while_stmt (243)
    on left: 192, on right: 189
repeat_stmt (244)
    on left: 193, on right: 190
for_stmt (245)
    on left: 194 195 196, on right: 191
varlimit (246)
    on left: 197 198 199 200, on right: 194
variable (247)
    on left: 201 202 203 204 205, on right: 154 155 156 197 198 199
    208 209 211 212 238
entire_var (248)
    on left: 206 207, on right: 74 75 116 117
indexed_var (249)
    on left: 208 209 210, on right: 203
field_var (250)
    on left: 211, on right: 204
file_var (251)
    on left: 212, on right: 205
expression (252)
    on left: 213 214 215, on right: 128 132 154 157 158 159 168 169
    170 171 192 193 194 195 196 198 199 200 208 210 240
relop (253)
    on left: 216 217 218 219 220 221, on right: 214
simple_expr (254)
    on left: 222 223 224 225, on right: 213 214 215 224 225
sign (255)
    on left: 226 227, on right: 223 225
addop (256)
    on left: 228 229 230, on right: 224 225
term (257)
    on left: 231 232, on right: 222 223 224 225 232
mulop (258)
    on left: 233 234 235 236 237, on right: 232
factor (259)
    on left: 238 239 240 241 242, on right: 231 232 242
unsigned_const (260)
    on left: 243 244 245 246 247 248, on right: 239
real (261)
    on left: 249 250, on right: 243


State 0

    0 $accept: . program "end of file"

    "program"  shift, and go to state 1

    program         go to state 2
    programheading  go to state 3


State 1

    2 programheading: "program" . "identifier" ";"

    "identifier"  shift, and go to state 4


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: programheading . globals "begin" statements "end" "."

    "label"  shift, and go to state 6

    $default  reduce using rule 4 (labels)

    globals  go to state 7
    labels   go to state 8


State 4

    2 programheading: "program" "identifier" . ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "end of file" .

    $default  accept


State 6

    5 labels: "label" . labellist ";"

    NMACRO       shift, and go to state 10
    "0-9"        shift, and go to state 11
    "final_end"  shift, and go to state 12

    labellist  go to state 13
    labeldecl  go to state 14


State 7

    1 program: programheading globals . "begin" statements "end" "."

    "begin"  shift, and go to state 15


State 8

    3 globals: labels . constants types variables procedures

    "const"  shift, and go to state 16

    $default  reduce using rule 12 (constants)

    constants  go to state 17


State 9

    2 programheading: "program" "identifier" ";" .

    $default  reduce using rule 2 (programheading)


State 10

    8 labeldecl: NMACRO .

    $default  reduce using rule 8 (labeldecl)


State 11

    9 labeldecl: "0-9" .

    $default  reduce using rule 9 (labeldecl)


State 12

   10 labeldecl: "final_end" .

    $default  reduce using rule 10 (labeldecl)


State 13

    5 labels: "label" labellist . ";"
    7 labellist: labellist . "," labeldecl

    ","  shift, and go to state 18
    ";"  shift, and go to state 19


State 14

    6 labellist: labeldecl .
   11 labeldecl: labeldecl . "+" "0-9"

    "+"  shift, and go to state 20

    $default  reduce using rule 6 (labellist)


State 15

    1 program: programheading globals "begin" . statements "end" "."

    NMACRO                shift, and go to state 21
    "return"              shift, and go to state 22
    "if"                  shift, and go to state 23
    "repeat"              shift, and go to state 24
    "while"               shift, and go to state 25
    "for"                 shift, and go to state 26
    "begin"               shift, and go to state 27
    "goto"                shift, and go to state 28
    "0-9"                 shift, and go to state 29
    "identifier"          shift, and go to state 30
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 32
    "procedurename"       shift, and go to state 33
    "call"                shift, and go to state 34
    "final_end"           shift, and go to state 35
    "case"                shift, and go to state 36
    CIGNORE               shift, and go to state 37
    CLABEL                shift, and go to state 38
    "reference variable"  shift, and go to state 39
    "C function return"   shift, and go to state 40
    "C procedure return"  shift, and go to state 41

    $default  reduce using rule 153 (empty_stmt)

    proc_stmt         go to state 42
    statements        go to state 43
    statement         go to state 44
    goto_stmt         go to state 45
    label             go to state 46
    stmt              go to state 47
    simple_stmt       go to state 48
    empty_stmt        go to state 49
    assign_stmt       go to state 50
    return_stmt       go to state 51
    structured_stmt   go to state 52
    compound_stmt     go to state 53
    conditional_stmt  go to state 54
    if_stmt           go to state 55
    case_stmt         go to state 56
    repetitive_stmt   go to state 57
    while_stmt        go to state 58
    repeat_stmt       go to state 59
    for_stmt          go to state 60
    variable          go to state 61
    indexed_var       go to state 62
    field_var         go to state 63
    file_var          go to state 64


State 16

   13 constants: "const" . constdefinitions
   14          | "const" . constdefinitions conststringdefinition

    "identifier"  shift, and go to state 65

    constdefinitions  go to state 66
    constdefinition   go to state 67


State 17

    3 globals: labels constants . types variables procedures

    "type"  shift, and go to state 68

    $default  reduce using rule 19 (types)

    types  go to state 69


State 18

    7 labellist: labellist "," . labeldecl

    NMACRO       shift, and go to state 10
    "0-9"        shift, and go to state 11
    "final_end"  shift, and go to state 12

    labeldecl  go to state 70


State 19

    5 labels: "label" labellist ";" .

    $default  reduce using rule 5 (labels)


State 20

   11 labeldecl: labeldecl "+" . "0-9"

    "0-9"  shift, and go to state 71


State 21

  143 label: NMACRO .
  145      | NMACRO . "+" "0-9"

    "+"  shift, and go to state 72

    $default  reduce using rule 143 (label)


State 22

  141 goto_stmt: "return" .

    $default  reduce using rule 141 (goto_stmt)


State 23

  168 if_stmt: "if" . expression "then" statement
  169        | "if" . expression "then" statement "else" statement

    NMACRO                shift, and go to state 73
    "+"                   shift, and go to state 74
    "-"                   shift, and go to state 75
    "("                   shift, and go to state 76
    "not"                 shift, and go to state 77
    "0-9"                 shift, and go to state 78
    "real"                shift, and go to state 79
    "'...'"               shift, and go to state 80
    "'.'"                 shift, and go to state 81
    "identifier"          shift, and go to state 30
    "constant"            shift, and go to state 82
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 83
    "call"                shift, and go to state 84
    "reference variable"  shift, and go to state 39

    function_call   go to state 85
    variable        go to state 86
    indexed_var     go to state 62
    field_var       go to state 63
    file_var        go to state 64
    expression      go to state 87
    simple_expr     go to state 88
    sign            go to state 89
    term            go to state 90
    factor          go to state 91
    unsigned_const  go to state 92
    real            go to state 93


State 24

  193 repeat_stmt: "repeat" . statements "until" expression

    NMACRO                shift, and go to state 21
    "return"              shift, and go to state 22
    "if"                  shift, and go to state 23
    "repeat"              shift, and go to state 24
    "while"               shift, and go to state 25
    "for"                 shift, and go to state 26
    "begin"               shift, and go to state 27
    "goto"                shift, and go to state 28
    "0-9"                 shift, and go to state 29
    "identifier"          shift, and go to state 30
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 32
    "procedurename"       shift, and go to state 33
    "call"                shift, and go to state 34
    "final_end"           shift, and go to state 35
    "case"                shift, and go to state 36
    CIGNORE               shift, and go to state 37
    CLABEL                shift, and go to state 38
    "reference variable"  shift, and go to state 39
    "C function return"   shift, and go to state 40
    "C procedure return"  shift, and go to state 41

    $default  reduce using rule 153 (empty_stmt)

    proc_stmt         go to state 42
    statements        go to state 94
    statement         go to state 44
    goto_stmt         go to state 45
    label             go to state 46
    stmt              go to state 47
    simple_stmt       go to state 48
    empty_stmt        go to state 49
    assign_stmt       go to state 50
    return_stmt       go to state 51
    structured_stmt   go to state 52
    compound_stmt     go to state 53
    conditional_stmt  go to state 54
    if_stmt           go to state 55
    case_stmt         go to state 56
    repetitive_stmt   go to state 57
    while_stmt        go to state 58
    repeat_stmt       go to state 59
    for_stmt          go to state 60
    variable          go to state 61
    indexed_var       go to state 62
    field_var         go to state 63
    file_var          go to state 64


State 25

  192 while_stmt: "while" . expression "do" statement

    NMACRO                shift, and go to state 73
    "+"                   shift, and go to state 74
    "-"                   shift, and go to state 75
    "("                   shift, and go to state 76
    "not"                 shift, and go to state 77
    "0-9"                 shift, and go to state 78
    "real"                shift, and go to state 79
    "'...'"               shift, and go to state 80
    "'.'"                 shift, and go to state 81
    "identifier"          shift, and go to state 30
    "constant"            shift, and go to state 82
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 83
    "call"                shift, and go to state 84
    "reference variable"  shift, and go to state 39

    function_call   go to state 85
    variable        go to state 86
    indexed_var     go to state 62
    field_var       go to state 63
    file_var        go to state 64
    expression      go to state 95
    simple_expr     go to state 88
    sign            go to state 89
    term            go to state 90
    factor          go to state 91
    unsigned_const  go to state 92
    real            go to state 93


State 26

  194 for_stmt: "for" . "identifier" ":=" expression "to" varlimit "do" statement
  195         | "for" . "identifier" ":=" expression "to" iconst "do" statement
  196         | "for" . "identifier" ":=" expression "downto" iconst "do" statement

    "identifier"  shift, and go to state 96


State 27

  165 compound_stmt: "begin" . statements "end"

    NMACRO                shift, and go to state 21
    "return"              shift, and go to state 22
    "if"                  shift, and go to state 23
    "repeat"              shift, and go to state 24
    "while"               shift, and go to state 25
    "for"                 shift, and go to state 26
    "begin"               shift, and go to state 27
    "goto"                shift, and go to state 28
    "0-9"                 shift, and go to state 29
    "identifier"          shift, and go to state 30
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 32
    "procedurename"       shift, and go to state 33
    "call"                shift, and go to state 34
    "final_end"           shift, and go to state 35
    "case"                shift, and go to state 36
    CIGNORE               shift, and go to state 37
    CLABEL                shift, and go to state 38
    "reference variable"  shift, and go to state 39
    "C function return"   shift, and go to state 40
    "C procedure return"  shift, and go to state 41

    $default  reduce using rule 153 (empty_stmt)

    proc_stmt         go to state 42
    statements        go to state 97
    statement         go to state 44
    goto_stmt         go to state 45
    label             go to state 46
    stmt              go to state 47
    simple_stmt       go to state 48
    empty_stmt        go to state 49
    assign_stmt       go to state 50
    return_stmt       go to state 51
    structured_stmt   go to state 52
    compound_stmt     go to state 53
    conditional_stmt  go to state 54
    if_stmt           go to state 55
    case_stmt         go to state 56
    repetitive_stmt   go to state 57
    while_stmt        go to state 58
    repeat_stmt       go to state 59
    for_stmt          go to state 60
    variable          go to state 61
    indexed_var       go to state 62
    field_var         go to state 63
    file_var          go to state 64


State 28

  138 goto_stmt: "goto" . label
  139          | "goto" . "final_end"

    NMACRO       shift, and go to state 21
    "0-9"        shift, and go to state 29
    "final_end"  shift, and go to state 98
    CLABEL       shift, and go to state 38

    label  go to state 99


State 29

  142 label: "0-9" .

    $default  reduce using rule 142 (label)


State 30

  201 variable: "identifier" .

    $default  reduce using rule 201 (variable)


State 31

  210 indexed_var: "array of file name" . "[" expression "]"

    "["  shift, and go to state 100


State 32

  157 return_stmt: "functionname" . ":=" expression

    ":="  shift, and go to state 101


State 33

  118 proc_stmt: "procedurename" . "(" args ")"
  120          | "procedurename" .

    "("  shift, and go to state 102

    $default  reduce using rule 120 (proc_stmt)


State 34

  119 proc_stmt: "call" . "(" args ")"
  121          | "call" .

    "("  shift, and go to state 103

    $default  reduce using rule 121 (proc_stmt)


State 35

  137 statement: "final_end" . ":" stmt

    ":"  shift, and go to state 104


State 36

  170 case_stmt: "case" . expression "of" case_list "end"
  171          | "case" . expression "of" case_list ";" "end"

    NMACRO                shift, and go to state 73
    "+"                   shift, and go to state 74
    "-"                   shift, and go to state 75
    "("                   shift, and go to state 76
    "not"                 shift, and go to state 77
    "0-9"                 shift, and go to state 78
    "real"                shift, and go to state 79
    "'...'"               shift, and go to state 80
    "'.'"                 shift, and go to state 81
    "identifier"          shift, and go to state 30
    "constant"            shift, and go to state 82
    "array of file name"  shift, and go to state 31
    "functionname"        shift, and go to state 83
    "call"                shift, and go to state 84
    "reference variable"  shift, and go to state 39

    function_call   go to state 85
    variable        go to state 86
    indexed_var     go to state 62
    field_var       go to state 63
    file_var        go to state 64
    expression      go to state 105
    simple_expr     go to state 88
    sign            go to state 89
    term            go to state 90
    factor          go to state 91
    unsigned_const  go to state 92
    real            go to state 93


State 37

  140 goto_stmt: CIGNORE . "final_end"

    "final_end"  shift, and go to state 106


State 38

  144 label: CLABEL .

    $default  reduce using rule 144 (label)


State 39

  202 variable: "reference variable" .

    $default  reduce using rule 202 (variable)


State 40

  158 return_stmt: "C function return" . CIGNORE expression
  159            | "C function return" . CIGNORE expression CIGNORE CIGNORE
  160            | "C function return" .

    CIGNORE  shift, and go to state 107

    $default  reduce using rule 160 (return_stmt)


State 41

  161 return_stmt: "C procedure return" .

    $default  reduce using rule 161 (return_stmt)


State 42

  152 simple_stmt: proc_stmt .

    $default  reduce using rule 152 (simple_stmt)


State 43

    1 program: programheading globals "begin" statements . "end" "."
  134 statements: statements . ";" statement

    ";"    shift, and go to state 108
    "end"  shift, and go to state 109


State 44

  133 statements: statement .

    $default  reduce using rule 133 (statements)


State 45

  151 simple_stmt: goto_stmt .

    $default  reduce using rule 151 (simple_stmt)


State 46

  136 statement: label . ":" stmt

    ":"  shift, and go to state 110


State 47

  135 statement: stmt .

    $default  reduce using rule 135 (statement)


State 48

  146 stmt: simple_stmt .
